--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="seccion_titulo">
             <h2 class="seccion_descripcion">Sobre mí</h2>
             <h3 class="seccion_header">
-                ¡Hola! Me llamo Álvaro y soy full stack Web Developer.
+                ¡Hola! Me llamo Álvaro y me formo como full stack Web Developer.
             </h3>
   
             <h4>Para conocerme un poco más, te diré que hay tres cosas que me encantan...</h4>
@@ -84,8 +84,8 @@
                     </div>
                 </div>
                 <p> 
-                    Convertir mi mayor pasión en mi profesión ha sido algo
-                    que ha marcado un antes y un después en mi vida.
+                    Estoy finalizando mi formación como Desarrollador de Aplicaciones Web con el objetivo 
+                    de convertir mi mayor pasión en mi profesión.
                 </p>
             </div>
             
