--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
                     </div>
                 </div>
                 <p> 
-                    Estoy finalizando mi formación como Desarrollador de Aplicaciones Web con el objetivo 
-                    de convertir mi mayor pasión en mi profesión.
+                    Soy Full Stack Web Developer. Hice de mi pasión mi profesión y ¡no lo cambio por nada!
                 </p>
             </div>
             
@@ -143,13 +142,8 @@
                     <h6>2020-2022</h6>
                 </div>
                 <div class="estudio">
-                    <h4>Máster en Psicología General Sanitaria</h4>
-                    <h5>Universidad Cardenal Herrera</h5>
-                    <h6>2018-2020</h6>
-                </div>
-                <div class="estudio">
                     <h4>Grado en Psicología</h4>
-                    <h5>Universidad Católica San Antonio</h5>
+                    <h5>UCAM - Murcia</h5>
                     <h6>2013-2017</h6>
                 </div>
             </div>
@@ -207,8 +201,8 @@
               <img src="images/logos/html.png" alt="html" title="HTML5" class="logo_trabajo logo_1">
               <img src="images/logos/css.svg" alt="css3" title="CSS3" class="logo_trabajo logo_2">
               <img src="images/logos/js.png" alt="JavaScript" title="JavaScript" class="logo_trabajo logo_3">
-              <img src="images/logos/jquery.png" alt="jQuery" title="jQuery" class="logo_trabajo logo_4">
-              <img src="images/logos/angular.png" alt="Angular" title="Angular" class="logo_trabajo logo_5">
+              <img src="images/logos/React.png" alt="React" title="React" class="logo_trabajo logo_4">
+              <img src="images/logos/jquery.png" alt="jQuery" title="jQuery" class="logo_trabajo logo_5">
             </div>
             <div class="explicacion_trabajo explicacion_trabajo_1 explicacion_trabajo_activo">
                 Considero que el Front End debe ofrecer al usuario la mejor experiencia posible. 
