--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="seccion_titulo">
             <h2 class="seccion_descripcion">Sobre mí</h2>
             <h3 class="seccion_header">
-                ¡Hola! Me llamo Álvaro y me formo como full stack Web Developer.
+                ¡Hola! Me llamo Álvaro y soy full stack Web Developer.
             </h3>
   
             <h4>Para conocerme un poco más, te diré que hay tres cosas que me encantan...</h4>
@@ -84,7 +84,7 @@
                     </div>
                 </div>
                 <p> 
-                    Soy Full Stack Web Developer. Hice de mi pasión mi profesión y ¡no lo cambio por nada!
+                    Como Desarrollador de Aplicaciones Web, puedo decir que hice de mi pasión mi profesión y ¡no lo cambio por nada!
                 </p>
             </div>
             
