--- a/index.html
+++ b/index.html
@@ -142,6 +142,11 @@
                     <h6>2020-2022</h6>
                 </div>
                 <div class="estudio">
+                    <h4>Máster en Psicología General Sanitaria</h4>
+                    <h5>UCH - CEU</h5>
+                    <h6>2018-2019</h6>
+                </div>
+                <div class="estudio">
                     <h4>Grado en Psicología</h4>
                     <h5>UCAM - Murcia</h5>
                     <h6>2013-2017</h6>
